--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -101,7 +101,7 @@ else
         <WindowTitle>
         </WindowTitle>
         <WindowContent>
-             <WorkOrderComponent WorkOrder="@selectedOrder" />
+             <WorkOrderComponent WorkOrder="@selectedOrder" isEditable=false />
         </WindowContent>
         <WindowActions>
             <WindowAction Name="Close" />
