--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -97,7 +97,9 @@ else
 
     <TelerikWindow @bind-Visible="@isOrderCardOpen"
                    CloseOnOverlayClick="true"
-                   Modal="true">
+                   Modal="true"
+                   Width="1280px"
+    >
         <WindowTitle>
         </WindowTitle>
         <WindowContent>
